@@ -1,2 +1,4 @@
+- Option `block` enables action blocking mode
+
 * Mon Apr 18 2016 - version 0.1.0
 - Initial release
